--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -38,4 +38,4 @@ gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 source 'https://rubygems.org'
 # gem 'github-pages', group: :jekyll_plugins
 
-gem 'webrick', '~> 1.7'
+# gem 'webrick', '~> 1.7'
