--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -34,4 +34,8 @@ gem "wdm", "~> 0.1.1", :platforms => [:mingw, :x64_mingw, :mswin]
 gem "http_parser.rb", "~> 0.6.0", :platforms => [:jruby]
 
 gem "faraday-retry"
-gem "webrick"
+
+install_if -> { ENV["GITHUB_ACTIONS"] != "true" } do
+  puts "Is GitHub action: #{ENV["GITHUB_ACTIONS"] == "true"}"
+  gem "webrick", "~> 1.8"
+end 
